created category GET and POST methods
